<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/imageBanner"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orign"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageMask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/imageBanner"
            app:layout_constraintEnd_toEndOf="@+id/imageBanner"
            app:layout_constraintStart_toStartOf="@+id/imageBanner"
            app:layout_constraintTop_toTopOf="@+id/imageBanner"

            android:background="@drawable/ic_mask_from_svg"
            app:srcCompat="@drawable/mask_png"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/imageStar0"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textTag"
            app:srcCompat="@drawable/ic_star_icon_on"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageStar1"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageStar0"
            app:layout_constraintTop_toBottomOf="@+id/textTag"
            app:srcCompat="@drawable/ic_star_icon_on"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageStar2"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageStar1"
            app:layout_constraintTop_toBottomOf="@+id/textTag"
            app:srcCompat="@drawable/ic_star_icon_on"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageStar3"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageStar2"
            app:layout_constraintTop_toBottomOf="@+id/textTag"
            app:srcCompat="@drawable/ic_star_icon_on"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageStar4"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageStar3"
            app:layout_constraintTop_toBottomOf="@+id/textTag"
            app:srcCompat="@drawable/ic_star_icon_off"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:shadowColor="@color/shadow_gray"
            android:shadowDx="@dimen/shadow_x"
            android:shadowDy="@dimen/shadow_y"
            android:shadowRadius="@dimen/shadow_radius"
            android:singleLine="false"
            android:text="@string/movie_name"
            android:textColor="@color/name_gray"
            android:textSize="@dimen/movie_name_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <TextView
            android:id="@+id/textTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:singleLine="false"
            android:text="@string/tag_text"
            android:textColor="@color/tag_color"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <TextView
            android:id="@+id/textReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews_text"
            android:textColor="@color/reviews_gray"
            android:textSize="@dimen/review_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textTag" />

        <TextView
            android:id="@+id/textStorylineName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:shadowColor="@color/shadow_gray"
            android:shadowDx="@dimen/shadow_x"
            android:shadowDy="@dimen/shadow_y"
            android:shadowRadius="@dimen/shadow_radius"
            android:text="@string/storyline_name"
            android:textColor="@color/name_gray"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textReviews" />

        <TextView
            android:id="@+id/textStorylineText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:letterSpacing="0.05"
            android:lineHeight="20sp"
            android:paddingTop="@dimen/text_size_12"
            android:paddingBottom="@dimen/text_size_12"
            android:text="@string/storyline_text"
            android:textColor="@color/white_0.75"
            android:textSize="@dimen/storyline_text_size"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textStorylineName" />

        <TextView
            android:id="@+id/textCastHeading"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:shadowColor="@color/shadow_gray"
            android:shadowDx="@dimen/shadow_x"
            android:shadowDy="@dimen/shadow_y"
            android:shadowRadius="@dimen/shadow_radius"
            android:text="@string/cast_name"
            android:textColor="@color/name_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textStorylineText" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_marginStart="18dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:srcCompat="@drawable/ic_path"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textTopButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/top_back_button"
            android:textColor="@color/white_0.50"
            android:textSize="@dimen/top_menu_text_size"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />


        <ImageView
            android:id="@+id/imagePG"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:srcCompat="@drawable/ic_rectangle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textPG"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/pg"
            android:textColor="@color/white"
            android:textSize="@dimen/pg_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imagePG"
            app:layout_constraintEnd_toEndOf="@+id/imagePG"
            app:layout_constraintStart_toStartOf="@+id/imagePG"
            app:layout_constraintTop_toTopOf="@+id/imagePG"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintGuide_begin="@dimen/space_right_left"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintGuide_end="@dimen/space_right_left"
            tools:visibility="invisible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintGuide_begin="44dp"
            tools:visibility="invisible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="84dp"
            tools:visibility="invisible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="222dp"
            tools:visibility="invisible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1:1"

            app:layout_constraintEnd_toStartOf="@+id/card1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textCastHeading">
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/downey"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintDimensionRatio="1:1"

            app:layout_constraintStart_toEndOf="@+id/card0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf ="@+id/card2"
            app:layout_constraintTop_toBottomOf="@+id/textCastHeading">
            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/evans"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintDimensionRatio="1:1"

            app:layout_constraintStart_toEndOf="@+id/card1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf ="@+id/card3"
            app:layout_constraintTop_toBottomOf="@+id/textCastHeading">
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/ruffalo"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card2"
            app:layout_constraintTop_toBottomOf="@+id/textCastHeading">
            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/hemsworth"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor_0"
            android:textColor="@color/actors_name_gray"
            app:layout_constraintEnd_toEndOf="@+id/card0"
            app:layout_constraintStart_toStartOf="@+id/card0"
            app:layout_constraintTop_toBottomOf="@+id/card0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor_1"
            android:textColor="@color/actors_name_gray"
            app:layout_constraintEnd_toEndOf="@+id/card1"
            app:layout_constraintStart_toStartOf="@+id/card1"
            app:layout_constraintTop_toBottomOf="@+id/card1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor_2"
            android:textColor="@color/actors_name_gray"
            app:layout_constraintEnd_toEndOf="@+id/card2"
            app:layout_constraintStart_toStartOf="@+id/card2"
            app:layout_constraintTop_toBottomOf="@+id/card2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor_3"
            android:textColor="@color/actors_name_gray"
            app:layout_constraintEnd_toEndOf="@+id/card3"
            app:layout_constraintStart_toStartOf="@+id/card3"
            app:layout_constraintTop_toBottomOf="@+id/card3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>